--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   google_fonts: ^5.1.0
   riverpod: ^2.3.6
   flutter_riverpod: ^2.3.6
+  uuid: ^3.0.7
+  image_picker: ^0.8.9
 
 dev_dependencies:
   flutter_test:
